# handsomeW-agent

./: .dockerignore  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  docker-compose.yml  main.py
.codex/: AGENTS.md  config.toml
agent/: base_agent.py  loop_agent.py  react_agent.py  simple_agent.py
api/: __init__.py  agent_service.py  routes.py  schemas.py
backend/: .env.example  Dockerfile  main.py  requirements.txt
backend/ai-service/: Dockerfile  main.py  pyproject.toml  requirements.txt  utils.py
backend/ai-service/agent/: react_agent.py  simple_agent.py
backend/ai-service/api/: agent_service.py  ai_digital_twin_routes.py  alarm_flow_routes.py  alarm_flow_store.py  digital_twin_store.py  routes.py  schemas.py  user_store.py
backend/ai-service/core/: __init__.py  base.py  context.py  llm.py  prompt.py  skill.py
backend/ai-service/data/: app.db
backend/ai-service/flow/: executor.py  live_log_store.py  scheduler.py
backend/ai-service/graph_rag/: config.py  runtime.py
backend/ai-service/graph_rag/rag_modules/: graph_data_preparation.py  graph_indexing.py  graph_rag_retrieval.py  hybrid_retrieval.py  intelligent_query_router.py  milvus_index_construction.py
backend/ai-service/graph_rag/rag_modules/test/: test.py
backend/ai-service/rag/: graph_rag_bridge.py
backend/ai-service/tools/: tool_executor.py
backend/ai-service/tools/builtin/: search_tool.py  shell_tool.py
core/: agent.py  base.py  config.py  context.py  llm.py  message.py  skill.py
docs/: graph-rag-digital-twin-integration.md  handsomeW-agent-优化方案.docx  handsomeW-agent-优化方案.md
(+170 files in other folders)
